--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
@@ -48,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.5",
+    "@types/react-text-mask": "^5.4.14"
   }
 }
